cpp/vehicle-purchase/run-tests-cpp.txt
Running automated test file(s):


===============================================================================

Running: make clean
rm -rf ./build

real	0m0.007s
user	0m0.002s
sys	0m0.004s

===============================================================================

export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"

===============================================================================

Running: make coverage | ansifilter
rm -rf ./build
mkdir -pv ./build
mkdir: created directory './build'

cd ./build; export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"; cmake -DEXERCISM_RUN_ALL_TESTS=1 -DCMAKE_EXPORT_COMPILE_COMMANDS=1 -G 'Unix Makefiles' ../; if make; then printf "\n=== All Tests Passed ===\n"; else printf "\n=== Test Failure ===\n"; false; fi
-- The CXX compiler identification is GNU 10.2.1
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Configuring done
-- Generating done
-- Build files have been written to: /home/vpayno/git_vpayno/exercism-workspace/cpp/vehicle-purchase/build
make[1]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/vehicle-purchase/build'
make[2]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/vehicle-purchase/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/vehicle-purchase/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/vehicle-purchase/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/vehicle-purchase/build'
[ 25%] Building CXX object CMakeFiles/vehicle-purchase.dir/vehicle_purchase_test.cpp.o
[ 50%] Building CXX object CMakeFiles/vehicle-purchase.dir/vehicle_purchase.cpp.o
[ 75%] Building CXX object CMakeFiles/vehicle-purchase.dir/test/tests-main.cpp.o
[100%] Linking CXX executable vehicle-purchase
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/vehicle-purchase/build'
[100%] Built target vehicle-purchase
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/vehicle-purchase/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/vehicle-purchase/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/vehicle-purchase/build'
===============================================================================
All tests passed (16 assertions in 16 test cases)

make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/vehicle-purchase/build'
[100%] Built target test_vehicle-purchase
make[2]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/vehicle-purchase/build'
make[1]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/vehicle-purchase/build'

=== All Tests Passed ===

find . -regextype posix-egrep -regex "^.*(tests-main|CompilerId).*[.](gcda|gcno)$" -print -delete
./build/CMakeFiles/3.22.2/CompilerIdCXX/CMakeCXXCompilerId.gcno
./build/CMakeFiles/vehicle-purchase.dir/test/tests-main.cpp.gcno
./build/CMakeFiles/vehicle-purchase.dir/test/tests-main.cpp.gcda

find . -regextype posix-egrep -regex "^.*[.](gcda|gcno)8653"

gcovr --print-summary
------------------------------------------------------------------------------
                           GCC Code Coverage Report
Directory: .
------------------------------------------------------------------------------
File                                       Lines    Exec  Cover   Missing
------------------------------------------------------------------------------
test/catch.hpp                                59      44    74%   1642-1643,1710-1711,2227,2229,2301-2302,2560,3780-3784,3786
vehicle_purchase.cpp                          16      15    93%   18
vehicle_purchase_test.cpp                     81      81   100%   
------------------------------------------------------------------------------
TOTAL                                        156     140    89%
------------------------------------------------------------------------------
lines: 89.7% (140 out of 156)
branches: 38.6% (139 out of 360)

real	0m8.148s
user	0m7.541s
sys	0m0.601s

===============================================================================

cmake-format --in-place CMakeLists.txt

real	0m0.148s
user	0m0.094s
sys	0m0.055s

===============================================================================

cmake-lint CMakeLists.txt
CMakeLists.txt
==============
CMakeLists.txt:15,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:17,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:67,70: [C0307] Bad indentation:
                                               )
  ^----BodyNode: 1:0->IfBlockNode: 65:0->BodyNode: 65:11->StatementNode: 66:2->TreeNode: 67:70

CMakeLists.txt:72,02: [C0113] Missing COMMENT in statement which allows it

Summary
=======
files scanned: 1
found lint:
  Convention: 4


real	0m0.143s
user	0m0.104s
sys	0m0.039s

===============================================================================

Running: clang-format-16 -style=file -i ./vehicle_purchase.cpp ./vehicle_purchase_test.cpp ./vehicle_purchase.h

real	0m0.021s
user	0m0.010s
sys	0m0.010s

===============================================================================

Running: ../../.github/citools/cpp/clang-check
clang-check-16 --analyze ./vehicle_purchase.cpp ./vehicle_purchase_test.cpp ./vehicle_purchase.h
error: argument unused during compilation: '-stdlib=libstdc++' [-Werror,-Wunused-command-line-argument]
error: invalid argument '-std=c++17' not allowed with 'C'
/home/vpayno/git_vpayno/exercism-workspace/cpp/vehicle-purchase/vehicle_purchase.h:5:10: fatal error: 'cmath' file not found
#include <cmath>
         ^~~~~~~
1 error generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/vehicle-purchase/vehicle_purchase.h.

real	0m0.517s
user	0m0.486s
sys	0m0.030s


real	0m0.519s
user	0m0.486s
sys	0m0.032s

===============================================================================

Running: ../../.github/citools/cpp/clang-tidy | head -n 100
15011 warnings generated.
50357 warnings generated.
50357 warnings and 3 errors generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/vehicle-purchase/vehicle_purchase.h.
Suppressed 50359 warnings (50354 in non-user code, 5 NOLINT).
Use -header-filter=.* to display errors from all non-system headers. Use -system-headers to display errors from system headers as well.
Found compiler error(s).

real	0m7.636s
user	0m7.553s
sys	0m0.079s
Running: clang-tidy-16 ./vehicle_purchase.cpp ./vehicle_purchase_test.cpp ./vehicle_purchase.h
error: invalid argument '-std=c++17' not allowed with 'C' [clang-diagnostic-error]
error: argument unused during compilation: '-stdlib=libstdc++' [clang-diagnostic-unused-command-line-argument]
/home/vpayno/git_vpayno/exercism-workspace/cpp/vehicle-purchase/vehicle_purchase.cpp:15:5: warning: variable 'comment' of type 'std::string' (aka 'basic_string<char>') can be declared 'const' [misc-const-correctness]
    std::string comment = " is clearly the better choice.";
    ^
                const 
/home/vpayno/git_vpayno/exercism-workspace/cpp/vehicle-purchase/vehicle_purchase.cpp:28:31: warning: 2 adjacent parameters of 'calculate_resell_price' of similar type ('double') are easily swapped by mistake [bugprone-easily-swappable-parameters]
double calculate_resell_price(double original_price, double age) {
                              ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/vpayno/git_vpayno/exercism-workspace/cpp/vehicle-purchase/vehicle_purchase.cpp:28:38: note: the first parameter in the range is 'original_price'
double calculate_resell_price(double original_price, double age) {
                                     ^~~~~~~~~~~~~~
/home/vpayno/git_vpayno/exercism-workspace/cpp/vehicle-purchase/vehicle_purchase.cpp:28:61: note: the last parameter in the range is 'age'
double calculate_resell_price(double original_price, double age) {
                                                            ^~~
/home/vpayno/git_vpayno/exercism-workspace/cpp/vehicle-purchase/vehicle_purchase.h:5:10: error: 'cmath' file not found [clang-diagnostic-error]
#include <cmath>
         ^~~~~~~
/home/vpayno/git_vpayno/exercism-workspace/cpp/vehicle-purchase/vehicle_purchase_test.cpp:10:5: warning: variable 'kind' of type 'std::string' (aka 'basic_string<char>') can be declared 'const' [misc-const-correctness]
    std::string kind{"car"};
    ^
                const 


real	0m7.639s
user	0m7.553s
sys	0m0.084s

===============================================================================

